# subgraphs

./: .cursorignore  .gitbook.yaml  .gitignore  .prettierignore  CHANGES.md  LICENSE  README.md  SUMMARY.md  gitbook.yaml  package-lock.json  package.json  reference.graphql  schema-bridge.graphql  schema-common.graphql  schema-depin.graphql  schema-derivatives-options.graphql  schema-derivatives-perpfutures.graphql  schema-dex-agg.graphql  schema-dex-amm-extended.graphql  schema-dex-amm.graphql  schema-generic.graphql  schema-layer-one.graphql  schema-lending-extended.graphql  schema-lending.graphql  schema-metrics.graphql  schema-network.graphql  schema-nft-marketplace.graphql  schema-yield.graphql
.husky/: pre-commit
Notional/: Notional Methodology
aave/: subgraph.yaml
apps/: README.md
cli-deploy/: README.md  index.js  package-lock.json  package.json
dashboard/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  README.md  package-lock.json  package.json
deployment/: .eslintrc.json  README.md  buildDeploymentMap.js  class.js  class.ts  decentralized_network_deployments.csv  deployment.deprecated.json  deployment.dev.json  deployment.js  deployment.json  deploymentClass.js  deploymentConfigurations.json  deploymentTest.js  execution.js  package-lock.json  package.json  package.template.json  produce_decentralized_network_csv.py  transform.js
docs/: CHANGES.md  CONTRIBUTING.md  Contributing.md  ERRORS.md  GITBOOK.md  ISSUES.md  Mapping.md  Methodology.md  ORACLES.md  Oracle.md  Oracles.md  PERFORMANCE.md  Perf.md  ProductionErrors.md  RESOURCES.md  SCHEMA.md  SETUP.md  STRUCTURE.md  SUMMARY.md  Schema.md  TOOLING.md  WALKTHROUGH.md  how-to-raise-github-issues.md  perf.md
messari-cli/: .gitignore  package-lock.json  package.json  readme.md
monitor/: .env.example  Deployments_7-30-2022.json  DiscordMessages.js  Dockerfile  README.md  alerts.js  clear.js  dexPoolLevel.js  errorSchemas.js  github.js  indexingStatus.js  lendingPoolLevel.js  messageDiscord.js  package-lock.json  package.json  protocolLevel.js  resolutions.js  script.js  util.js  vaultPoolLevel.js
mscutil/: README  package-lock.json  package.json
src/: schemaVersionUpdate.py  (+1 more)
substreams/erc20/: Cargo.toml
substreams/uniswap-v2/: .gitpod.yml  Cargo.toml  Dockerfile.gitpod  Makefile  README.md  build.rs  rust-toolchain.toml  substreams.yaml
substreams/uniswap-v2/abi/: erc721.json
substreams/uniswap-v2/proto/: erc721.proto  uni.proto  uniswap.proto  uniswap_v2.proto
substreams/uniswap-v2/src/: lib.rs
substreams/uniswap-v2/src/abi/: erc20.rs  erc721.rs  mod.rs  pair.rs
substreams/uniswap-v2/src/pb/: eth.erc721.v1.rs  eth.messari.uniswap.v1.rs  eth.messari.uniswap_v2.rs  mod.rs
(+9733 files in other folders)
