[package]
name = "substreams-uniswap-v2"
version = "0.1.0"
description = "Messari's standardized substream for Uniswap v2"
edition = "2021"
repository = "https://github.com/messari/subgraphs/"

[lib]
crate-type = ["cdylib"]

[target.wasm32-unknown-unknown.dependencies]
ethabi = "17.0"
hex = "0.4.3"
hex-literal = "0.3.4"
prost = "0.10.1"
# Use latest from https://crates.io/crates/substreams
substreams = "0.0.18"
# Use latest from https://crates.io/crates/substreams-ethereum
substreams-ethereum = "0.1.9"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.1.9"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
